# advent-of-code

./: .gitignore  Pipfile  day1.py  day2.py  day3.py  day4.py  day5.py  day6.py  generate_index.py  index.html  pyproject.toml  requirements.txt  test_day2.py  test_day3.py  test_day4.py  test_day5.py  test_day6.py
2015/: conway.py  day10.py  day11.py  day12.py  day13.py  day14.py  day15.py  day16.py  day17.py  day18.py  day19.py  day20.py  day21.py  day22.py  day23.py  day24.py  day25.py  day7.html  day7.py  day8.py  day8helper.py  test_day7.py
2016/: day1.py  day11.py  day13.py  day2.py  day3.py  day4.py  day5.py  day6.py  day7.py  day7py2.py
2017/: async_fun.py  binary_tree_flip.py  binary_tree_flip_fiveline.py  day1.py  day10.py  day11.py  day12.py  day13.py  day14.py  day15.py  day16.py  day17.py  day17_with_deque.py  day18.py  day18v2.py  day18v3.py  day19.py  day2.py  day20.py  day21.py  day22.py  day22v2.py  day22v3.py  day23.py  day24.py  day24v2.py  day25.py  day6.py  day7.py  day8.py  day9.py  dispatcher.py  jnz_parser.py  test_day10.py  test_day11.py  test_day12.py  test_day13.py  test_day14.py  test_day15.py  test_day16.py  (+12 more)
2018/: day1.py  day10.py  day11.py  day12.py  day13.py  day15.py  day17.py  day2.py  day3.py  day4.py  day5.py  day6.py  day7.py  day8.py  day9.py
2019/: day1.py  day10.py  day11.py  day12.py  day13.py  day2.py  day3.py  day4.py  day5.py  day6.py  day7.py  day8.py  day9.py  download_input.py
2020/: day1.py  day10.py  day11.py  day12.py  day13.py  day14.py  day15.py  day16.py  day17.py  day19.py  day2.py  day3.py  day4.py  day5.py  (+5 more)
(+19 files in other folders)
