[tool.poetry]
name = "advent-of-code"
version = "0.1.0"
description = ""
authors = ["Artur H. Lange <ArturLange@poczta.fm>"]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
yapf = "^0.30.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
